fixed header overlap issue

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -206,14 +206,15 @@ textarea {
 -------------*/
 
 footer{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	display: block;
+	/*flex-direction: column;
+	align-items: center;*/
+  margin:0 auto;
 	text-align: center;
 	color: #fff;
 	background-color: #414a4f;
 	padding: 26px 0;
-  position:absolute;
+  position: relative;
   bottom:0;
   width: 100%;
 }
